# indian-crops

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
indian_crops/: app.py  query_database.py
